--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 <!-- ###############################################################################################33############# -->
 
 
-    <section class="bg-primary text-light p-4">
+    <section class="bg-primary text-light p-2">
         <div class="container">
             <div class="d-md-flex justify-content-between align-items-center">
                 <h3 class=" mb-md-0  d-flex">Start Mission now</h3>
@@ -119,7 +119,7 @@
 
 
 
-    <section class="p-5">
+    <section class="p-2">
         <div class="container">
             <div class="row g-4 text-center">
                 <div class="col-md">
@@ -160,7 +160,7 @@
     <!-- ################################################################################3######################### -->
 
 
-    <section id="learn" class="p-5">
+    <section id="learn" class="p-2">
         <div class="container">
             <div class="row align-items-center justify-content-between">
                 <div class="col-md">
@@ -181,7 +181,7 @@
 
 
 
-    <section id="learn" class="p-5 bg-dark text-light">
+    <section id="learn" class="p-2 bg-dark text-light">
         <div class="container">
             <div class="row align-items-center justify-content-between">
                 <div class="col-md p-5">
@@ -202,7 +202,7 @@
     <!-- #################################################################################################################### -->
     <!-- ASK QUESTIONS  -->
 
-    <section id="questions" class="mt-5 p-5">
+    <section id="questions" class="mt-5 p-2">
         <div class="container">
                 <h2 class="text-center mb-4">Frequently ask Questions</h2>
                 <div class="accordion accordion-flush" id="questions">
@@ -274,7 +274,7 @@
     <!-- ############################################################################################################### -->
 
     <!-- Instructorse -->
-    <section id="Instructors" class="p-5 bg-primary">
+    <section id="Instructors" class=" bg-primary">
         <div class="container">
             <h2 class="text-center text-white"> Our Instructors</h2>
             <p class="lead text-white text-center mb-5">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis, qui tempore consequatur necessitatibus accusantium eaque!</p>
@@ -339,7 +339,7 @@
 
 <!-- ################################################################################################################# -->
 
-    <section class="p-5">
+    <section class="">
         <div class="container">
             <div class="row g-4">
 
@@ -374,9 +374,9 @@
     </section>
 
 
-    <footer class="p-5 bg-dark text-center text-light position-relative">
+    <footer class=" bg-dark text-center text-light position-relative">
         <div class="container">
-            <p class="lead ">Copyright &copy; 2022 muzahidul Islam </p>
+            <p class=" ">Copyright &copy; 2022 muzahidul Islam </p>
             <a class="position-absolute bottom-0 end-0 p-5" href="#">
                 <i class="bi bi-arrow-up-circle h1"></i>
             </a>
