--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 
 
-    <section class="bg-dark text-light p-3  text-center text-sm-start">
+    <section class="bg-dark text-light p-3 p-md-5 text-center text-sm-start">
         <div class="container">
             <div class="d-sm-flex align-items-center justify-content-center">
                 <div>
@@ -103,7 +103,7 @@
 <!-- ###############################################################################################33############# -->
 
 
-    <section class="bg-primary text-light p-2">
+    <section class="bg-primary text-light p-3 p-md-5">
         <div class="container">
             <div class="d-md-flex justify-content-between align-items-center">
                 <h3 class=" mb-md-0  d-flex">Start Mission now</h3>
@@ -119,7 +119,7 @@
 
 
 
-    <section class="p-2">
+    <section class="p-3 p-md-5">
         <div class="container">
             <div class="row g-4 text-center">
                 <div class="col-md">
@@ -160,13 +160,13 @@
     <!-- ################################################################################3######################### -->
 
 
-    <section id="learn" class="p-2">
+    <section id="learn" class="p-3 p-md-5">
         <div class="container">
             <div class="row align-items-center justify-content-between">
                 <div class="col-md">
                     <img class="img-fluid" src="/IMG/Fundamental.png" alt="">
                 </div>
-                <div class="col-md p-5">
+                <div class="col-md ">
                     <h2>Learn The Fundamental</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus harum ut maiores veritatis? Eos, laudantium.</p>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis nemo unde minus odio laboriosam tenetur, at consectetur non iusto nostrum dolorum eligendi sapiente quia laudantium alias deserunt accusantium! Voluptas, aliquam.</p>
@@ -181,7 +181,7 @@
 
 
 
-    <section id="learn" class="p-2 bg-dark text-light">
+    <section id="learn" class="p-3 p-md-5 bg-dark text-light">
         <div class="container">
             <div class="row align-items-center justify-content-between">
                 <div class="col-md p-5">
@@ -202,7 +202,7 @@
     <!-- #################################################################################################################### -->
     <!-- ASK QUESTIONS  -->
 
-    <section id="questions" class="mt-5 p-2">
+    <section id="questions" class="mt-5 p-3 p-md-5">
         <div class="container">
                 <h2 class="text-center mb-4">Frequently ask Questions</h2>
                 <div class="accordion accordion-flush" id="questions">
@@ -274,7 +274,7 @@
     <!-- ############################################################################################################### -->
 
     <!-- Instructorse -->
-    <section id="Instructors" class=" bg-primary">
+    <section id="Instructors" class="p-3 p-md-5 bg-primary">
         <div class="container">
             <h2 class="text-center text-white"> Our Instructors</h2>
             <p class="lead text-white text-center mb-5">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis, qui tempore consequatur necessitatibus accusantium eaque!</p>
@@ -339,7 +339,7 @@
 
 <!-- ################################################################################################################# -->
 
-    <section class="">
+    <section class="p-3 p-md-5">
         <div class="container">
             <div class="row g-4">
 
@@ -374,7 +374,7 @@
     </section>
 
 
-    <footer class=" bg-dark text-center text-light position-relative">
+    <footer class=" px-5 p-2 bg-dark text-center text-light position-relative">
         <div class="container">
             <p class=" ">Copyright &copy; 2022 muzahidul Islam </p>
             <a class="position-absolute bottom-0 end-0 p-5" href="#">
