--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
     </section>
 
 
-    <footer class=" px-5 p-2 bg-dark text-center text-light position-relative">
+    <footer class=" py-5 p-2 bg-dark text-center text-light position-relative">
         <div class="container">
             <p class=" ">Copyright &copy; 2022 muzahidul Islam </p>
             <a class="position-absolute bottom-0 end-0 p-5" href="#">
