--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FRONTEND WEB DEV</title>
-    <link rel="stylesheet" href="/CSS/bootstrap.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="/CSS/style.css">
 </head>
@@ -49,7 +50,6 @@
     <!-- ############################################################################################3 -->
 
 
-
     <section class="bg-dark text-light p-3 p-md-5 text-center text-sm-start">
         <div class="container">
             <div class="d-sm-flex align-items-center justify-content-center">
@@ -62,7 +62,7 @@
                         <div class="modal-dialog">
                           <div class="modal-content">
                             <div class="modal-header">
-                              <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                              <h5 class="modal-title" id="exampleModalLabel">Sign up </h5>
                               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                             </div>
                             <div class="modal-body">
@@ -160,17 +160,17 @@
     <!-- ################################################################################3######################### -->
 
 
-    <section id="learn" class="p-3 p-md-5">
+    <section id="learn" class="p-3 p-md-5 mt-5">
         <div class="container">
             <div class="row align-items-center justify-content-between">
                 <div class="col-md">
                     <img class="img-fluid" src="/IMG/Fundamental.png" alt="">
                 </div>
                 <div class="col-md ">
-                    <h2>Learn The Fundamental</h2>
+                    <h2>Learn From Basic</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus harum ut maiores veritatis? Eos, laudantium.</p>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis nemo unde minus odio laboriosam tenetur, at consectetur non iusto nostrum dolorum eligendi sapiente quia laudantium alias deserunt accusantium! Voluptas, aliquam.</p>
-                    <a href="#" class="btn btn-light mt-3"> <i class="bi bi-chevron-right"></i> Read More</a>
+                    <a href="/Funadamental/fundamental.html" class="btn btn-light mt-3"> <i class="bi bi-chevron-right"></i> Read More</a>
                 </div>
             </div>
         </div>
@@ -185,13 +185,13 @@
         <div class="container">
             <div class="row align-items-center justify-content-between">
                 <div class="col-md p-5">
-                    <h2>Learn Rect</h2>
+                    <h2>Learn React</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus harum ut maiores veritatis? Eos, laudantium.</p>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis nemo unde minus odio laboriosam tenetur, at consectetur non iusto nostrum dolorum eligendi sapiente quia laudantium alias deserunt accusantium! Voluptas, aliquam.</p>
-                    <a href="#" class="btn btn-light mt-3"> <i class="bi bi-chevron-right"></i> Read More</a>
+                    <a href="/Funadamental/fundamental.html" class="btn btn-light mt-3"> <i class="bi bi-chevron-right"></i> Read More</a>
                 </div>
                 <div class="col-md">
-                    <img class="img-fluid" src="/IMG/atom-png-27349.png" alt="">
+                    <img class="img-fluid" src="/IMG/React-icon.svg.png" alt="">
                 </div>
             </div>
         </div>
@@ -372,8 +372,22 @@
             </div>
         </div>
     </section>
+<!-- ########################################################################################## -->
+
+<nav aria-label="Page navigation example" class="mt-5">
+    <ul class="pagination justify-content-center">
+      <li class="page-item ">
+        <a class="page-link disabled" href="/index.html" >Previous</a>
+      </li>
+      <li class="page-item active"><a class="page-link" href="#"><i class="bi bi-house"></i></a></li>
+      <li class="page-item">
+        <a class="page-link "  href="/Funadamental/fundamental.html">Next</a>
+      </li>
+    </ul>
+  </nav>
 
 
+  <!-- ########################################################################################## -->
     <footer class=" py-5 p-2 bg-dark text-center text-light position-relative">
         <div class="container">
             <p class=" ">Copyright &copy; 2022 muzahidul Islam </p>
@@ -385,8 +399,8 @@
 
 
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
 
-    <script src="/JS/bootstrap.js"></script>
     <script src="/JS/app.js"></script>
 </body>
 </html>
