--- a/Funadamental/fundamental.html
+++ b/Funadamental/fundamental.html
@@ -98,7 +98,7 @@
 
 <!-- ########################################################################################## -->
 
-    <section class="p-5 mt-5 ">
+    <section class="p-3 p-md-5 mt-5 ">
         <div class="container">
             <h2 class="text-center mb-3 ">Learn From The Basic</h2>
 
