--- a/index.html
+++ b/index.html
@@ -181,13 +181,13 @@
 
 
 
-    <section id="learn" class="p-3 p-md-5 bg-dark text-light">
+    <section id="learn" class="p-2 py-5 p-md-5 bg-dark text-light">
         <div class="container">
             <div class="row align-items-center justify-content-between">
                 <div class="col-md p-5">
                     <h2>Learn React</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus harum ut maiores veritatis? Eos, laudantium.</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis nemo unde minus odio laboriosam tenetur, at consectetur non iusto nostrum dolorum eligendi sapiente quia laudantium alias deserunt accusantium! Voluptas, aliquam.</p>
+                    <p>Lorem ipsumr adipisicing elit. Necessitatibus harum ut maiores veritatis? Eos, laudantium.</p>
+                    <p>Lorem ipsumnon iusto nostrum dolorum eligendi sapiente quia laudantium alias deserunt accusantium! Voluptas, aliquam.</p>
                     <a href="/Funadamental/fundamental.html" class="btn btn-light mt-3"> <i class="bi bi-chevron-right"></i> Read More</a>
                 </div>
                 <div class="col-md">
@@ -274,7 +274,7 @@
     <!-- ############################################################################################################### -->
 
     <!-- Instructorse -->
-    <section id="Instructors" class="p-3 p-md-5 bg-primary">
+    <section id="Instructors" class="p-3 py-5 p-md-5 bg-primary">
         <div class="container">
             <h2 class="text-center text-white"> Our Instructors</h2>
             <p class="lead text-white text-center mb-5">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis, qui tempore consequatur necessitatibus accusantium eaque!</p>
