--- a/Funadamental/fundamental.html
+++ b/Funadamental/fundamental.html
@@ -58,27 +58,20 @@
                     <div class="modal-dialog">
                       <div class="modal-content">
                         <div class="modal-header">
-                          <h5 class="modal-title" id="exampleModalLabel">Sign up </h5>
+                          <h5 class="modal-title" id="exampleModalLabel">Sign In </h5>
                           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body">
-                          <p class="lead">Fill out the form </p>
+                          <p class="lead">Log in to continue </p>
                             <form class="">
-                                <div class="mb-3">
-                                    <label for="first-name" class="col-form-label">First Name</label>
-                                    <input type="text" class="form-control" id="first-name">
-                                </div>
-                                <div class="mb-3">
-                                    <label for="last-name" class="col-form-label">Last Name</label>
-                                    <input type="text" class="form-control" id="last-name">
-                                </div>
+                                
                                 <div class="mb-3">
                                     <label for="email" class="col-form-label">Email</label>
                                     <input type="text" class="form-control" id="email">
                                 </div>
                                 <div class="mb-3">
-                                    <label for="phone" class="col-form-label">Phone</label>
-                                    <input type="text" class="form-control" id="phone" required>
+                                    <label for="pas" class="col-form-label">Phone</label>
+                                    <input type="password" class="form-control" id="pas" required>
                                 </div>
                             </form>         
                         </div>
