--- a/Funadamental/fundamental.html
+++ b/Funadamental/fundamental.html
@@ -25,7 +25,7 @@
             <div class="collapse navbar-collapse" id="navmenu">
                 <ul class="navbar-nav ms-auto g-2">
                     <li class="nav-item">
-                        <a href="#" class="nav-link ">Home</a>
+                        <a href="/index.html" class="nav-link ">Home</a>
                     </li>
                     <li class="nav-item">
                         <a href="#questions" class="nav-link ">Questions</a>
